<resources>
    <string name="app_name">Management</string>
    <string name="아이디">아이디</string>
    <string name="비밀번호">비밀번호</string>
    <string name="이름">이름</string>
    <string name="나이">나이</string>
    <string name="회원가입">회원&#160;가입</string>
    <string name="회원관리">회원&#160;관리</string>
    <string name="로그인">로그인</string>
    <string name="삭제">삭제</string>
    <string name="검색">검색</string>
    <string name="로그인화면">로그인&#160;화면</string>
</resources>
