<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/userID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/아이디"
        android:textSize="18sp"
        android:textColor="#00a7f5"/>

    <TextView
        android:id="@+id/userPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/비밀번호"
        android:textSize="18sp"
        android:textColor="#f92a3f"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/이름"
        android:textSize="18sp"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/userAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/나이"
        android:textSize="18sp"
        android:textColor="#a902f0"/>
</LinearLayout>