<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context="com.example.sungwookang.management.MainActivity">
    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/아이디"
        android:background="@drawable/textview_main"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/idText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/비밀번호"
        android:background="@drawable/textview_main"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="30dp"/>

        <Button
            android:id="@+id/managementButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/회원관리"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_login"
            android:layout_gravity="center"/>
</LinearLayout>
